--- a/mongrel-eventsource/composer.json
+++ b/mongrel-eventsource/composer.json
@@ -8,5 +8,8 @@
     },
     "require": {
         "mongrel2/mongrel2": ">=0.1.9-dev"
+    },
+    "autoload": {
+        "psr-0": { "EventSource": "src" }
     }
 }
