refactor EventSource lib

--- a/mongrel-eventsource/composer.json
+++ b/mongrel-eventsource/composer.json
@@ -10,6 +10,6 @@
         "mongrel2/mongrel2": ">=0.1.9-dev"
     },
     "autoload": {
-        "psr-0": { "EventSource": "src" }
+        "psr-0": { "Igorw\\EventSource": "src" }
     }
 }
